# Fox-Ask-Pass

./: .gitignore  CMakeLists.txt  README.md  README_CS.md  version.h.in
include/: icons.h
src/: icons.cpp  main.cpp
